# mandelbrot

./: .gitignore  Cargo.toml  README.md
.run/: Run.run.xml
Attic/: catmull_rom.rs
src/: cmdline.rs  errors.rs  main.rs  math.rs  output.rs  palette.rs  parsing.rs  partition.rs  splines.rs
