[package]
name = "mandelbrot"
version = "0.3.0"
authors = ["Patrick Nadeau"]
edition = "2018"

[profile.dev]
opt-level = 1

[dependencies]
thiserror = "1.0"
num = "0.4"
image = "0.24.5"
rayon = "1"
rug = "1.18.0"
clap = {version="4.1.8", features=["derive"] }
num_cpus = "1.15"
lazy_static = "1.4.0"
regex = "1.7.1"

[dev-dependencies]
matplotrust = "0.1.7"